<resources>
    <string name="app_name">M3TS</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="benchmark_finished_toast_text">Benchmark finished, check logcat for results!</string>
    <string name="play_button_text">Play</string>
    <string name="stop_button_text">stop</string>
    <string name="benchmark_play_button_text">Start Benchmarking</string>
    <string name="benchmark_stop_button_text">Benchmarking in progress…</string>
    <string name="errorMsgPermissions">Sorry, cannot use M3TS unless all permissions are granted</string>
    <string name="idDisplay">m3ts_display</string>
    <string name="idTracker">m3ts_tracker</string>
    <string name="errorMsgNearbyConnection">Failed to request connection to the other device. Try again or switch to PubNub connection (settings).</string>
    <string name="videoLength">%d seconds in buffer</string>
    <string name="noVideoLength">Buffer is empty</string>
    <string name="errorPermissionCamera">Camera permission denied</string>
    <string name="errorPermissionStorage">Storage permission denied</string>
    <string name="errorCamera">Camera error</string>
    <string name="saving">Saving…</string>
    <string name="mainMenuPlayMovieString">Play movie activity</string>
    <string name="mainMenuPlaybackString">Playback activity</string>
    <string name="mainMenuBenchmarkingString">Benchmarking activity</string>
    <string name="mainMenuRecordingString">Recording activity</string>
    <string name="playbackPickVideo">Open video</string>
    <string name="recordingManualStopped">REC</string>
    <string name="recordingManualRunning">REC</string>
    <string name="recordingAutomaticStopped">AUTO</string>
    <string name="recordingAutomaticRunning">AUTO</string>
    <string name="clearDetections">CLEAR</string>
    <string name="previewToggleOn">PRE ON</string>
    <string name="previewToggleOff">PRE OFF</string>
    <string name="recordToggleOn">REC ON</string>
    <string name="recordToggleOff">REC OFF</string>
    <string name="hiresToggleOn">1080p</string>
    <string name="hiresToggleOff">720p</string>
    <string name="autoToggleOn">AUTO ON</string>
    <string name="autoToggleOff">AUTO OFF</string>
    <string name="detectToggleOn">DET ON</string>
    <string name="detectToggleOff">DET OFF</string>
    <string name="settings">Settings</string>
    <string name="prefHeaderCapture">Video capture</string>
    <string name="prefCameraFacing">Camera direction</string>
    <string name="prefCameraFacingDefault">rear</string>
    <string name="prefResolution">Resolution</string>
    <string name="prefRecordMode">Recording</string>
    <string name="prefSlowPreview">Slow preview</string>
    <string name="prefSlowPreviewSummary">Update only once in 2 seconds</string>
    <string name="prefHeaderDetection">Detection</string>
    <string name="prefColorSpace">Color space</string>
    <string name="prefColorSpaceDefault">gray</string>
    <string name="prefProcRes">Processing resolution</string>
    <string name="prefProcResDefault">600</string>
    <string name="prefHeaderVelocity">Velocity estimation</string>
    <string name="prefHeaderDebug">Developer Options</string>
    <string name="prefHeaderGame">Game</string>
    <string name="prefPlayer1Name">Name of left Player</string>
    <string name="prefPlayer1NameDefault">Hans</string>
    <string name="prefPlayer1Key">player_1</string>
    <string name="prefPlayer2Name">Name of right Player</string>
    <string name="prefPlayer2NameDefault">Peter</string>
    <string name="prefPlayer2Key">player_2</string>
    <string name="prefDisplayDebug">Display debug info</string>
    <string name="prefDisplayDebugKey">display_debug</string>
    <string name="prefDisplayDebugDefault">false</string>
    <string name="prefDisplayDebugSummary">Shows debug information on the tracking device\'s display</string>
    <string name="prefRecord">Record matches</string>
    <string name="prefRecordKey">record_matches</string>
    <string name="prefRecordDefault">false</string>
    <string name="prefUseBlackSideDefault">false</string>
    <string name="prefUseBlackSideKey">use_red_side</string>
    <string name="prefUseBlackSideTitle">Use only red side of racket for serving</string>
    <string name="prefUseBlackSideSummary">Allows the use of only the red side of the racket to signal that a player is ready for serve</string>
    <string name="prefUseAudioDefault">true</string>
    <string name="prefUseAudioKey">use_audio</string>
    <string name="prefUseAudioSummary">Allows the use of audio of the tracker device to assist ball detection</string>
    <string name="prefUseAudioTitle">Use Audio</string>
    <string name="prefVelocityEstimationMode">Velocity estimation mode</string>
    <string name="prefVelocityEstimationModeDefault">pxfr</string>
    <string name="prefObjectDiameterPicker">Object size based on sport</string>
    <string name="prefObjectDiameterCustom">Custom object diameter [m]</string>
    <string name="prefObjectDiameterCustomDefault">1.00</string>
    <string name="prefFrameRate">Precise frame rate [Hz]</string>
    <string name="prefFrameRateDefault">30.00</string>
    <string name="prefHeaderTracker">Tracking Settings</string>
    <string name="runBenchmark">Run benchmark</string>
    <string name="runVideoPlayer">Run a replay</string>
    <string name="prefDisableDetection">Disable FMO detection</string>
    <string name="prefPubnub">Connect with pubnub</string>
    <string name="prefPubnubDefault">false</string>
    <string name="prefPubnubKey">connect_pubnub</string>
    <string name="prefBenchmark">Benchmark</string>
    <string name="playerLeftDefaultName">Player 1</string>
    <string name="playerRightDefaultName">Player 2</string>
    <string name="gameScoreStart">0</string>
    <string name="gameScoreDivider">:</string>
    <string name="debugBallShotLabel">Ball shot from:</string>
    <string name="debugBallBounceLabel">Bounce count:</string>
    <string name="debugBallShotStart">None</string>
    <string name="debugBallCountStart">0</string>
    <string name="contentDescRevert">reverts last selected corner</string>
    <string name="initMarkTableLabel">Mark the left and right table corner</string>
    <string name="initMoveDeviceMsg">Move the device until the white line is somewhat aligned with the net</string>
    <string name="trackerStatusConnectedWithDisplay">connected to server</string>
    <string name="trackerStatusConnectedWithDisplayFail">unable to connect to display!</string>
    <string name="appName">M3TS</string>
    <string name="appNameLong">mobile table tennis tracking system</string>
    <string name="mainTrackerBtnLabel">Use as Tracker</string>
    <string name="mainDisplayBtnLabel">Use as Display</string>
    <string name="mainTutorialBtnLabel">Help</string>
    <string name="tutorialTitleKey">title</string>
    <string name="tutorialImagesKey">images</string>
    <string name="tutorialDescriptionsKey">descriptions</string>
    <string name="tutorialPlayBtnLabel">How to Serve</string>
    <string name="tutorialTrackerBtnLabel">How to setup Tracker</string>
    <string name="tutorialDisplayBtnLabel">The Scoreboard</string>
    <string name="tutorialTrackerSetupDescription0">Place the Tracker roughly 2-3 meters from the table.</string>
    <string name="tutorialTrackerSetupDescription1">The height of the Tracker should roughly be the same as the height of the ping pong table. Follow the instructions on screen for camera placement.</string>
    <string name="tutorialTrackerSetupDescription2">Once the screen asks for a QR-Code, the camera is placed correctly and the screen should look similar to the one above.</string>
    <string name="tutorialServeDescription0">To serve, the server must first hold the red or black side of the racket over his/her table corner for a second. An audible "beep" sound effect will be played. The server can now perform the serve.</string>
    <string name="initMarkTableLabelExplanation">Long Press to select a corner</string>
    <string name="initCornersSelectedLabel">Corners selected: </string>
    <string name="initStartGameButtonLabel">Start Game</string>
    <string name="initMatchTypeLabel">Match Type:</string>
    <string name="initServerSideLabel">Server starting on:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ttsSide"> Side</string>
    <string name="ttsWin">Game </string>
    <string name="ttsMatchWin"> wins the Match!</string>
    <string name="ttsReadyServe"> Serve </string>
    <string name="ttsServe">Serve </string>
    <string name="ttsTo"> to </string>
    <string name="miTitle">Connecting With Tracker</string>
    <string name="miSubTitle">scan the QR code with the tracker device</string>
    <string name="miConnectedTitle">Connected With Tracker</string>
    <string name="miConnectedSubTitle">click on the button to take a picture of the table with the tracker device</string>
    <string name="miPictureLoadingSubTitle">the image of the table is being transmitted</string>
    <string name="miTakePicture">Take Picture</string>
    <string name="msTitle">Match Settings</string>
    <string name="msType">Choose Match Length</string>
    <string name="msServer">Choose Server</string>
    <string name="msBtn">Create Match</string>
    <string name="mwStartNew">Play another Match</string>
    <string name="mwStats">Show Stats</string>
    <string name="mwMenu">Main Menu</string>
    <string name="mwWon">\u0020won!</string>
    <string name="msInitialValue">00</string>
    <string name="msDivider">:</string>
    <string name="msDialogTitle">%1$s won the match!</string>
    <string name="msDialogMsg">Do you want to continue or replay the last point?</string>
    <string name="msDialogContinue">Continue</string>
    <string name="msDialogReplay">Replay</string>
    <string name="mstTitle">Match Stats</string>
    <string name="mstScore">%1$d:%2$d</string>
    <string name="mstTotalDuration">Total Play Time</string>
    <string name="mstAvgDuration">Ø Point Play Time</string>
    <string name="mstErrorRate">Error Rate</string>
    <string name="mstFastestStrike">fastest strike</string>
    <string name="mstStrikes">strikes</string>
    <string name="mstTitlePlayer">Player Stats</string>
    <string name="mstTitleOverall">Overall Stats</string>
    <string name="mstTitleHeatMap">Heat Map</string>
    <string name="mstTitleHistory">Match History</string>
    <string name="mstClose">Close Stats</string>
    <string name="mstSeconds">%1$ds</string>
    <string name="mstPercentage">%1$.2f%%</string>
    <string name="mstLoadingMsg">Wait for the match stats to load.</string>
    <string name="mstLoadingTitle">Match Stats Loading</string>
    <string name="gstTitle">Game %1$d</string>
    <string name="gstHistory">Game History</string>
    <string name="gstBtn">Stats</string>
    <string name="gstWinner">Winner: %1$s</string>
    <string name="mhServer">Server:</string>
    <string name="mhWinner">Winner:</string>
    <string name="mhDuration">Play Time:</string>
    <string name="mhStrikes">Strikes:</string>
    <string name="mhDecision">Decision:</string>
    <string name="mhScore">%1$d:%2$d</string>
    <string name="mhFastestStrike">Fastest Strike:</string>
    <string name="mhKmh">%1$d km/h</string>
    <string name="scanText">Scan the QR code from the display</string>
    <string name="quitMatchTitle">Quit match</string>
    <string name="quitMatchMessage">Are you sure you want to quit the ongoing match?\nYou will be sent back to the main screen.</string>
    <string name="quitMatchProceed">Quit Match</string>
    <string name="quitMatchCancel">Cancel</string>
    <string name="connectTitle">Accept connection with %1$s</string>
    <string name="connectMessage">Confirm the code matches on both devices:\n</string>
    <string name="disconnectTitle">Lost connection to other device</string>
</resources>