<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference android:title="@string/runVideoPlayer">
        <intent android:action="com.android.grafika.PlayMovieSurfaceActivity" />
    </Preference>
    <Preference android:title="Benchmark">
        <intent android:action="com.android.grafika.Joe" />
    </Preference>
    <SwitchPreference
        android:defaultValue="@string/prefDisplayDebugDefault"
        android:key="@string/prefDisplayDebugKey"
        android:summary="@string/prefDisplayDebugSummary"
        android:title="@string/prefDisplayDebug" />
    <SwitchPreference
        android:defaultValue="@string/prefRecordDefault"
        android:key="@string/prefRecordKey"
        android:title="@string/prefRecord" />
    <SwitchPreference
        android:defaultValue="@string/prefPubnubDefault"
        android:key="@string/prefPubnubKey"
        android:title="@string/prefPubnub" />
</PreferenceScreen>
