<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:gravity="center">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/mhDecision"
            android:layout_weight="0.25" />

        <TextView
            android:id="@+id/decision"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_weight="0.75" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:gravity="center">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/mhWinner"
            android:layout_weight="0.25" />

        <TextView
            android:id="@+id/winner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_weight="0.75" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:gravity="center">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/mhServer"
            android:layout_weight="0.25" />

        <TextView
            android:id="@+id/server"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_weight="0.75" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:gravity="center">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/mhDuration"
            android:layout_weight="0.25" />

        <TextView
            android:id="@+id/duration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_weight="0.75" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:gravity="center">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/mhStrikes"
            android:layout_weight="0.25" />

        <TextView
            android:id="@+id/strikes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_weight="0.75" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:gravity="center">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/mhFastestStrike"
            android:layout_weight="0.25" />

        <TextView
            android:id="@+id/fastest_strike"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_weight="0.75" />
    </LinearLayout>
</LinearLayout>