<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.otaliastudios.zoom.ZoomLayout
        android:id="@+id/init_zoomLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical|horizontal"
        android:fitsSystemWindows="true"
        android:longClickable="true"
        app:alignment="center"
        app:animationDuration="280"
        app:flingEnabled="true"
        app:hasClickableChildren="true"
        app:horizontalPanEnabled="false"
        app:maxZoom="5"
        app:maxZoomType="zoom"
        app:minZoom="1"
        app:minZoomType="zoom"
        app:oneFingerScrollEnabled="true"
        app:overPinchable="false"
        app:overScrollHorizontal="true"
        app:overScrollVertical="true"
        app:scrollEnabled="true"
        app:threeFingersScrollEnabled="true"
        app:transformation="centerInside"
        app:transformationGravity="center"
        app:twoFingersScrollEnabled="true"
        app:verticalPanEnabled="false"
        app:zoomEnabled="true">
        <FrameLayout
            android:id="@+id/frameLayoutCorners"
            android:layout_width="1920dp"
            android:layout_height="1080dp">
            <SurfaceView
                android:id="@+id/table_frame_surface"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">
            </SurfaceView>
        </FrameLayout>
    </com.otaliastudios.zoom.ZoomLayout>
    <SurfaceView
        android:id="@+id/init_cornerSurface"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <ImageButton
        android:id="@+id/init_revertButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/radius_background"
        android:contentDescription="@string/contentDescRevert"
        android:padding="4dp"
        android:src="@android:drawable/ic_menu_revert"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"/>
    <include layout="@layout/corner_selection_views" />
    <Button
        android:id="@+id/init_startMatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/radius_background"
        android:padding="20dp"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:elevation="8dp"
        android:text="@string/initStartGameButtonLabel"
        android:textColor="@android:color/secondary_text_light"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"/>
    <GridLayout
        android:id="@+id/init_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/radius_background"
        android:padding="16dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:columnCount="1"
        android:rowCount="2">

        <TextView
            android:id="@+id/init_txtMarkTableLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/initMarkTableLabel"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/init_txtMarkTableLabelExplanation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/initMarkTableLabelExplanation"
            android:textAlignment="center"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="12sp" />
    </GridLayout>

</RelativeLayout>