<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ch.m3ts.tracker.visualization.live.LiveActivity"
    android:keepScreenOn="true">
    <include layout="@layout/camera_and_tracks_surface_views" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:keepScreenOn="true">
        <GridLayout
            android:id="@+id/playMovie_debugGrid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/radius_background"
            android:columnCount="2"
            android:padding="10dp"
            android:rowCount="5">

            <TextView
                android:id="@+id/txtLabelSide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/debugBallShotLabel"
                android:textAlignment="viewStart"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtSide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:text="@string/debugBallShotStart"
                android:textAlignment="textEnd"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtLabelBounce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/debugBallBounceLabel"
                android:textAlignment="viewStart"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtBounce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:text="@string/debugBallCountStart"
                android:textAlignment="textStart"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:text="Current state:"
                android:textAlignment="textStart"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtPlayMovieState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:text="NONE"
                android:textAlignment="textStart"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:text="Server:"
                android:textAlignment="textStart"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtPlayMovieServing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:text="true"
                android:textAlignment="textStart"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="14sp"
                android:textStyle="bold" />

        </GridLayout>

        <include layout="@layout/debug_score_layout" />

        <TextView
            android:id="@+id/tracker_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="tracker is running"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/display_connected_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trackerStatusConnectedWithDisplay"
            android:textColor="@color/color_success"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dp" />

    </RelativeLayout>
</merge>